# template-observer-pattern

./: CMakeLists.txt  LICENSE  README.md  main.cpp
